fix: (navbar) outline button cut off. also make sure that our atomic components work well with the navbar

--- a/src/components/navbar/navbar.bootstrap.scss
+++ b/src/components/navbar/navbar.bootstrap.scss
@@ -16,4 +16,8 @@
     igc-navbar igc-icon {
         color: #{utils.contrast-color(surface, 500)};
     }
+
+    igc-input::part(helper-text) {
+        margin-top: 0 !important;
+    }
 }
