--- a/src/components/navbar/navbar.material.scss
+++ b/src/components/navbar/navbar.material.scss
@@ -40,10 +40,23 @@
 
 [name='start']::slotted(*) {
     margin-inline-end: rem(16px);
+    margin-inline-start: rem(1px);
 }
 
 [name='end']::slotted(*) {
     margin-inline-start: rem(16px);
+    margin-inline-end: rem(1px);
+}
+
+::slotted(igc-input[part='helper-text']) {
+    margin-top: 0 !important;
+}
+
+::slotted(igc-avatar[part='base']) {
+    max-width: rem(32px);
+    max-height: rem(32px);
+    min-height: 0;
+    min-width: 0;
 }
 
 ::slotted(igc-icon) {
